==> QuantumLeaps/qpc/3rd_party/ek-lm3s6965/lwip_driver/netif/eth_driver.c <==
#include "qpc.h"
#include "lwip/opt.h"
#include "lwip/init.h"
#include "lwip/def.h"
#include "lwip/mem.h"
#include "lwip/pbuf.h"
#include "lwip/sys.h"
#include "lwip/stats.h"
#include "lwip/snmp.h"
#include "lwip/dhcp.h"
#include "lwip/autoip.h"
#include "netif/etharp.h"
#include "netif/eth_driver.h"
#include "LM3S6965.h"
#include <string.h>                                         /* for memcpy() */
#define TX_PBUF_QUEUE_LEN 8
#define PbufQueue_isEmpty(me_) ((me_)->qwrite == (me_)->qread)
#define ETH_INT_RX              (1U << 0)
#define ETH_INT_TXER            (1U << 1)
#define ETH_INT_TX              (1U << 2)
#define ETH_INT_RXOF            (1U << 3)
#define ETH_INT_RXER            (1U << 4)
#define ETH_INT_MDIO            (1U << 5)
#define ETH_INT_PHY             (1U << 6)
#define ETH_CFG_TX_PADEN        (1U << 1)
#define ETH_CFG_TX_CRCEN        (1U << 2)
#define ETH_CFG_TX_DPLXEN       (1U << 4)
#define ETH_CFG_RX_AMULEN       (1U << 9)
#define ETH_CFG_RX_PRMSEN       (1U << 10)
#define ETH_CFG_RX_BADCRCDIS    (1U << 11)
#define ETH_CFG_TS_TSEN         (1U << 16)
#define MAC_TCTL_TXEN           (1U << 0)
#define MAC_TCTL_PADEN          (1U << 1)
#define MAC_TCTL_CRC            (1U << 2)
#define MAC_TCTL_DUPLEX         (1U << 4)
#define MAC_RCTL_RXEN           (1U << 0)
#define MAC_RCTL_AMUL           (1U << 1)
#define MAC_RCTL_PRMS           (1U << 2)
#define MAC_RCTL_BADCRC         (1U << 3)
#define MAC_RCTL_RSTFIFO        (1U << 4)

static err_t ethernetif_init(struct netif *netif) {
    union {
        uint8_t  byte[4];
        uint32_t word;
    } addr;
    uint32_t tmp;

    SYSCTL->RCGC2 |= (1U << 28) | (1U << 30);/* enable clock to MAC and PHY */
    __NOP();
    __NOP();

    SYSCTL->SRCR2 |= (1U << 28) | (1U << 30); /* put MAC and PHY into reset */
    __NOP();
    __NOP();
    __NOP();
    __NOP();
    SYSCTL->SRCR2 &= ~((1U << 28) | (1U << 30));       /* take out of reset */

    /* Program the MAC Address into the device. The first four bytes of the
    * MAC Address are placed into the IA0 register. The remaining two bytes
    * of the MAC address are placed into the IA1 register.
    */
    addr.byte[0] = netif->hwaddr[0];
    addr.byte[1] = netif->hwaddr[1];
    addr.byte[2] = netif->hwaddr[2];
    addr.byte[3] = netif->hwaddr[3];
    ETH->IA0 = addr.word;
    addr.word = 0;
    addr.byte[0] = netif->hwaddr[4];
    addr.byte[1] = netif->hwaddr[5];
    ETH->IA1 = addr.word;

    netif->mtu = 1500;                             /* maximum transfer unit */

                                                 /* set device capabilities */
    netif->flags = (NETIF_FLAG_BROADCAST
                    | NETIF_FLAG_ETHARP | NETIF_FLAG_LINK_UP);

                                         /* disable all Ethernet interrupts */
    ETH->IM &= ~(ETH_INT_PHY | ETH_INT_MDIO | ETH_INT_RXER
                 | ETH_INT_RXOF | ETH_INT_TX | ETH_INT_TXER | ETH_INT_RX);

    ETH->IACK = ETH->RIS;                     /* acknolwedge all interrupts */

    /* initialize the Ethernet Controller clock */
    ETH->MDV = ((SystemCoreClock / 2) / 2500000) & 0xFF;

    /* configure the Ethernet Controller for normal operation
    * - Enable TX Duplex Mode
    * - Enable TX Padding
    * - Enable TX CRC Generation
    * - Enable RX Multicast Reception
    */
    tmp  = ETH->TCTL;
    tmp &= ~(MAC_TCTL_DUPLEX | MAC_TCTL_CRC | MAC_TCTL_PADEN);
    tmp |= (ETH_CFG_TX_DPLXEN | ETH_CFG_TX_CRCEN
            | ETH_CFG_TX_PADEN | ETH_CFG_RX_AMULEN);
    ETH->TCTL = tmp;

    tmp  = ETH->RCTL;
    tmp &= ~(MAC_RCTL_BADCRC | MAC_RCTL_PRMS | MAC_RCTL_AMUL);
    tmp |= (ETH_CFG_RX_AMULEN >> 8) & 0x0FF;
    ETH->RCTL = tmp;

    ETH->RCTL |= ((1U << 0) | (1U << 4));
    ETH->TCTL |= (1U << 0);                  /* enable Ethernet transmitter */
    ETH->RCTL |= (1U << 4);      /* reset the Rx FIFO again, after enabling */

    return ERR_OK;
}

static void low_level_transmit(struct pbuf *p) {
    int iBuf;
    unsigned char *pucBuf;
    unsigned long *pulBuf;
    struct pbuf *q;
    int iGather;
    unsigned long ulGather;
    unsigned char *pucGather;

    /**
    * Fill in the first two bytes of the payload data (configured as padding
    * with ETH_PAD_SIZE = 2) with the total length of the payload data
    * (minus the Ethernet MAC layer header).
    */
    *((unsigned short *)(p->payload)) = p->tot_len - 16;

    /* Initialize the gather register. */
    iGather = 0;
    pucGather = (unsigned char *)&ulGather;
    ulGather = 0;

    /* Copy data from the pbuf(s) into the TX Fifo. */
    for (q = p; q != NULL; q = q->next) {
        /* Intialize a char pointer and index to the pbuf payload data. */
        pucBuf = (unsigned char *)q->payload;
        iBuf = 0;

        /**
        * If the gather buffer has leftover data from a previous pbuf
        * in the chain, fill it up and write it to the Tx FIFO.
        */
        while ((iBuf < q->len) && (iGather != 0)) {
            /* Copy a byte from the pbuf into the gather buffer. */
            pucGather[iGather] = pucBuf[iBuf++];

            /* Increment the gather buffer index modulo 4. */
            iGather = ((iGather + 1) % 4);
        }

        /**
        * If the gather index is 0 and the pbuf index is non-zero,
        * we have a gather buffer to write into the Tx FIFO.
        */
        if ((iGather == 0) && (iBuf != 0)) {
            ETH->DATA = ulGather;
            ulGather = 0;
        }

        /* Initialze a long pointer into the pbuf for 32-bit access. */
        pulBuf = (unsigned long *)&pucBuf[iBuf];

        /**
        * Copy words of pbuf data into the Tx FIFO, but don't go past
        * the end of the pbuf.
        */
        while ((iBuf + 4) <= q->len) {
            ETH->DATA = *pulBuf++;
            iBuf += 4;
        }

        /**
        * Check if leftover data in the pbuf and save it in the gather
        * buffer for the next time.
        */
        while (iBuf < q->len) {
            /* Copy a byte from the pbuf into the gather buffer. */
            pucGather[iGather] = pucBuf[iBuf++];

            /* Increment the gather buffer index modulo 4. */
            iGather = ((iGather + 1) % 4);
        }
    }

    /* Send any leftover data to the FIFO. */
    ETH->DATA = ulGather;

    /* Wakeup the transmitter. */
    ETH->TR = MAC_TR_NEWTX;

    LINK_STATS_INC(link.xmit);
}

static struct pbuf *low_level_receive(void) {
    struct pbuf *p, *q;
    u16_t len;
    u32_t temp;
    int i;

#if LWIP_PTPD
    u32_t time_s, time_ns;

    /* Get the current timestamp if PTPD is enabled */
    lwIPHostGetTime(&time_s, &time_ns);
#endif

    /* Check if a packet is available, if not, return NULL packet. */
    if ((ETH->NP & MAC_NP_NPR_M) == 0) {
        return (struct pbuf *)0;
    }

    /**
    * Obtain the size of the packet and put it into the "len" variable.
    * Note:  The length returned in the FIFO length position includes the
    * two bytes for the length + the 4 bytes for the FCS.
    */
    temp = ETH->DATA;
    len = temp & 0xFFFF;

    /* We allocate a pbuf chain of pbufs from the pool. */
    p = pbuf_alloc(PBUF_RAW, len, PBUF_POOL);

    /* If a pbuf was allocated, read the packet into the pbuf. */
    if (p != NULL) {
        /* Place the first word into the first pbuf location. */
        *(unsigned long *)p->payload = temp;
        p->payload = (char *)(p->payload) + 4;
        p->len -= 4;

        /* Process all but the last buffer in the pbuf chain. */
        q = p;
        do {
            /* Setup a byte pointer into the payload section of the pbuf. */
            unsigned long *ptr = (unsigned long *)q->payload;

            /**
            * Read data from FIFO into the current pbuf
            * (assume pbuf length is modulo 4)
            */
            for (i = 0; i < q->len; i += 4) {
                *ptr++ = ETH->DATA;
            }

            /* Link in the next pbuf in the chain. */
            q = q->next;
        } while (q != NULL);

        /* Restore the first pbuf parameters to their original values. */
        p->payload = (char *)(p->payload) - 4;
        p->len += 4;

        /* Adjust the link statistics */
        LINK_STATS_INC(link.recv);

#if LWIP_PTPD
        /* Place the timestamp in the PBUF */
        p->time_s = time_s;
        p->time_ns = time_ns;
#endif
    }

    /* If no pbuf available, just drain the RX fifo. */
    else {
        for (i = 4; i < len; i+=4) {
            temp = ETH->DATA;
        }

        /* Adjust the link statistics */
        LINK_STATS_INC(link.memerr);
        LINK_STATS_INC(link.drop);
    }

    return p;
}
