==> QuantumLeaps/qpc/examples/rx/qk/renesas/lwip_qk_yrdkrx62n/lwip_port/netif/eth_driver.c <==
#include "qp_port.h"
#include "lwip/opt.h"
#include "lwip/init.h"
#include "lwip/def.h"
#include "lwip/mem.h"
#include "lwip/pbuf.h"
#include "lwip/sys.h"
#include "lwip/stats.h"
#include "lwip/snmp.h"
#include "lwip/dhcp.h"
#include "lwip/autoip.h"
#include "netif/etharp.h"
#include "netif/eth_driver.h"
#include "iodefine.h"
#include "phy.h"
#include <string.h>                                         /* for memcpy() */
#define NEXT(i_, e_)              (((i_) < ((e_) - 1U)) ? ((i_) + 1) : 0U)
#define EDMAC_TX_END_INTERRUPT    (1U << 21)
#define EDMAC_RX_END_INTERRUPT    (1U << 18)
#define ACT_STAT  0x80000000U
#define DL_STAT   0x40000000U
#define FP1_STAT  0x20000000U
#define FP0_STAT  0x10000000U
#define FE_STAT   0x08000000U

static err_t ethernetif_init(struct netif *netif) {
    uint32_t i;
    uint32_t volatile dly;
    EDMAC_Desc *desc;

    //SYSTEM.MSTPCRB.BIT.MSTPB15 = 0;          /* enable the EtherC and EDMAC */
    //for (dly = 100000U; dly > 0; --dly) {                    /* crude delay */
    //}

    /* Ethernet settings */
    IOPORT.PFENET.BYTE = 0x82U;      /* enable Ethernet, RMII mode, LINKSTA */
    PORTA.ICR.BIT.B5 = 1U;                                   /* ET_LINKSTA  */
    PORTA.ICR.BIT.B3 = 1U;                                   /* ET_MDIO     */
    PORTB.ICR.BIT.B0 = 1U;                                   /* RMII_RXD1   */
    PORTB.ICR.BIT.B1 = 1U;                                   /* RMII_RXD0   */
    PORTB.ICR.BIT.B2 = 1U;                                   /* REF50CLK    */
    PORTB.ICR.BIT.B3 = 1U;                                   /* RMII_RX_ER  */
    PORTB.ICR.BIT.B7 = 1U;                                   /* RMII_CRS_DV */


    for (i = 0U; i < Q_DIM(l_rxDesc); ++i) {   /* initialize RX descriptors */
        desc = &l_rxDesc[i];

        desc->pbuf = pbuf_alloc(PBUF_RAW,
                                LWIP_MEM_ALIGN_SIZE(PBUF_POOL_BUFSIZE),
                                PBUF_POOL);
        Q_ASSERT(desc->pbuf != NULL);

        desc->size    = 0U;
        desc->bufsize = desc->pbuf->len;
        desc->bufaddr = desc->pbuf->payload;
        desc->status  = ACT_STAT;
    }
    desc->status |= DL_STAT;   /* set the last descriptor to close the ring */
    l_rxQueue.head    = 0U;
    l_rxQueue.tail    = 0U;
    l_rxQueue.is_full = 0U;
    l_rxQueue.n_err   = 0U;

    for (i = 0U; i < Q_DIM(l_txDesc); ++i) {   /* initialize TX descriptors */
        desc = &l_txDesc[i];

        desc->pbuf    = NULL;
        desc->size    = 0U;
        desc->bufsize = 0U;
        desc->bufaddr = (void *)0;
        desc->status  = 0U;
    }
    desc->status |= DL_STAT;   /* set the last descriptor to close the ring */
    l_txQueue.head    = 0U;
    l_txQueue.tail    = 0U;
    l_txQueue.is_full = 0U;
    l_txQueue.n_err   = 0U;

    EDMAC.EDMR.BIT.SWR = 1U;                             /* reset the EDMAC */
    for (dly = 100000U; dly > 0; --dly) {                    /* crude delay */
    }

    ETHERC.MAHR      = (  (uint32_t)netif->hwaddr[0] << 24)
                       | ((uint32_t)netif->hwaddr[1] << 16)
                       | ((uint32_t)netif->hwaddr[2] << 8)
                       |  (uint32_t)netif->hwaddr[3];
    ETHERC.MALR.BIT.MA = ((uint32_t)netif->hwaddr[4] << 8)
                       |  (uint32_t)netif->hwaddr[5];

    netif->mtu   = 1518U;               /* maximum transfer unit 1500 + CRC */
    netif->flags = (NETIF_FLAG_BROADCAST         /* set device capabilities */
                    | NETIF_FLAG_ETHARP | NETIF_FLAG_LINK_UP);

    /* ETHERC */
    ETHERC.ECSR.LONG   = 0x00000037U;  /* clear BFR, PSRTO, LCHNG, MPD, ICD */
    ETHERC.RFLR.LONG   = netif->mtu;       /* ethernet payload is 1500+ CRC */
    ETHERC.IPGR.LONG   = 0x00000014U;            /* Intergap is 96-bit time */
    ETHERC.ECMR.BIT.PRM = 0x00000000U;   /* ensure promiscuous mode is off. */

    /* EDMAC */
    EDMAC.EESR.LONG   = 0x47FF0F9FU;  /* clear ETHERC and EDMAC status bits */
#if __LIT
    EDMAC.EDMR.BIT.DE = 1U;                      /* little endian operation */
#endif
    EDMAC.RDLAR       = &l_rxDesc[0];     /* the Rx Descriptor List Address */
    EDMAC.TDLAR       = &l_txDesc[0];     /* the Tx Descriptor List Address */
    EDMAC.TRSCER.LONG = 0x00000000U;  /* copy-back status is RFE & TFE only */
    EDMAC.TFTR.LONG   = 0x00000000U;    /* TX FIFO (store and forward mode) */
    //EDMAC.FDR.LONG    = 0x00000000U;         /* TX & RX FIFOs are 256 bytes */
    EDMAC.FDR.LONG    = 0x00000707U;        /* TX & RX FIFOs are 2048 bytes */
    EDMAC.RMCR.LONG   = 0x00000003U;  /* receive is normal mode (continued) */
    EDMAC.EESIPR.LONG = EDMAC_RX_END_INTERRUPT;

    if (phy_init() != R_PHY_OK) {                     /* initialize the PHY */
        return ERR_IF;              /* return low-level netif error to lwIP */
    }

    /* NOTE: the configuration continues in eth_driver_connect()
    *  AFTER the PHY setup.
    */

    return ERR_OK;
}

static err_t low_level_transmit(struct pbuf *p) {
    uint8_t i;
    EDMAC_Desc *desc;
    err_t ret = ERR_OK;                                   /* assume success */

    Q_REQUIRE((p != NULL)
              && (p->next == NULL));      /* only non-chained pbufs for now */

              /* remove all the sent pbufs from the tail of the TX queue... */
    for (i = l_txQueue.tail;
         (i != l_txQueue.head) || l_txQueue.is_full;
         i = NEXT(i, Q_DIM(l_txDesc)))
    {
        desc = &l_txDesc[i];
        if ((desc->status & ACT_STAT) != 0U) {  /* descriptor still active? */
            break;
        }
        else {  /* descriptor no longer active, which means that is is sent */
            pbuf_free(desc->pbuf);             /* free the transmitted pbuf */
            desc->pbuf = NULL;
            l_txQueue.is_full = 0U;   /* the queue certainly no longer full */
        }
    }
    l_txQueue.tail = i;                           /* advance the tail index */

                         /* add the new pbuf to the head of the TX queue... */
    if (!l_txQueue.is_full) {                     /* is the queue NOT full? */
        i = l_txQueue.head;                         /* store the head index */
        l_txQueue.head = NEXT(i, Q_DIM(l_txDesc));/* advance the head index */
        l_txQueue.is_full = (l_txQueue.head == l_txQueue.tail);

        desc = &l_txDesc[i];
        Q_ASSERT(((desc->status & ACT_STAT) == 0U)
                   && (desc->pbuf == NULL));

        desc->status &= DL_STAT;      /* clear the status except the DL bit */
        desc->bufsize = p->len;
        desc->bufaddr = p->payload;
        desc->pbuf    = p;
        desc->status |= (FP1_STAT | FP0_STAT | ACT_STAT);
    }
    else {
        pbuf_free(p);                                /* don't leak the pbuf */

        ++l_txQueue.n_err;           /* count the number of overflow errors */
        if (l_txQueue.n_err > 100U) {          /* too many overflow errors? */
            l_txQueue.head      = 0U;
            l_txQueue.tail      = 0U;
            l_txQueue.n_err     = 0U;
            l_txQueue.is_full   = 0U;
            l_txDesc[0].status &= DL_STAT;              /* clear the status */
        }

        ret = ERR_BUF;    /* signal a buffer problem (not critical) to lwIP */
    }

    EDMAC.EDTRR.LONG   = 1U;                            /* restart EDMAC TX */

    return ret;
}

static struct pbuf *low_level_receive(void) {
    struct pbuf *p   = NULL;
    EDMAC_Desc *desc = &l_rxDesc[l_rxQueue.tail];

    if ((desc->status & ACT_STAT) != 0U) {
        /* packet not ready yet */
    }
    else {
        if ((desc->status & FE_STAT) != 0U) {
            LINK_STATS_INC(link.memerr);
            LINK_STATS_INC(link.drop);
            ++l_rxQueue.n_err;                     /* account for the error */
        }
        else {
            if ((desc->status & FP0_STAT) == 0U) {
                return NULL;
            }

            p = desc->pbuf;
            p->len     = desc->size;

            Q_ASSERT(p->len < p->tot_len);
            p->tot_len = p->len;

                                 /* allocate new buffer for this descriptor */
            desc->pbuf = pbuf_alloc(PBUF_RAW,
                                    LWIP_MEM_ALIGN_SIZE(PBUF_POOL_BUFSIZE),
                                    PBUF_POOL);
            Q_ASSERT(desc->pbuf != NULL);


#if LWIP_PTPD
            lwIPHostGetTime(&p->time_s, &p->time_ns);  /* add the timestamp */
#endif
        }
                                                  /* advance the tail index */
        l_rxQueue.tail = NEXT(l_rxQueue.tail, Q_DIM(l_rxDesc));

        desc->size    = 0U;
        desc->bufaddr = desc->pbuf->payload;
        desc->bufsize = desc->pbuf->len;

        if (desc == &l_rxDesc[Q_DIM(l_rxDesc) - 1U]) {     /* the last one? */
            desc->status = DL_STAT | ACT_STAT;
        }
        else {
            desc->status = ACT_STAT;
        }

        EDMAC.EDRRR.LONG = 1U;                          /* restart EDMAC RX */
    }

    return p;
}
